<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/header_bg" >
    	
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:text="@string/query_activity_title" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ccc"
        android:padding="10dp" >
        
        <RelativeLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:background="#fff"
        	android:padding="10dp">
        	
            <TextView
                android:id="@+id/query_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/query_sub_title" />
            
            <EditText
                android:id="@+id/query_date_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000"
                android:inputType="date"
                android:layout_below="@id/query_sub_title"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:clickable="true"
                android:hint="@string/query_date_from"
                android:onClick="showDatePicker" />
            
            <EditText
                android:id="@+id/query_date_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:textColor="#000"
                android:layout_below="@id/query_sub_title"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:hint="@string/query_date_to"
                android:onClick="showDatePicker" />
            
            <Button
                android:id="@+id/query_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:layout_below="@id/query_date_to"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/query_do"
                android:onClick="doQuery" />
        </RelativeLayout>
        
    </LinearLayout>
    <View  
    	android:layout_width="match_parent"  
    	android:layout_height="2dp"  
    	android:background="@drawable/vertical_divider" />
   	<LinearLayout
    	android:layout_width="match_parent"
       	android:layout_height="match_parent"
       	android:background="#ccc"
       	android:padding="10dp" >
       
       	<TableLayout
       	    android:id="@+id/query_result_table"
        	android:layout_width="match_parent"
           	android:layout_height="match_parent"
           	android:shrinkColumns="*"
           	android:stretchColumns="*"
           	android:orientation="vertical"
           	android:padding="10dp"
           	android:background="#fff" >
            
       	    
  	        <TextView
  	            android:layout_width="match_parent"
  	            android:layout_height="wrap_content"
  	            android:gravity="center"
  	            android:text="@string/query_result_title"
  	            android:textColor="#000"
  	            android:textSize="20sp"/>

		</TableLayout>
		
	</LinearLayout>

</LinearLayout>
